# triton-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  batch_chamfer.py  boundary_loss.py  chamfer_loss.py  custom_vjp.py  kernel_indexing.py  kernel_indexing_mask.py  main.cu  main.py  pallas.py  setup.py
cmake/: cudaKDTree.cmake
include/: closest_query.cuh  importance_sampling.cuh  knn_helper.cuh
src/: closest_query.cu  importance_sampling.cu  knn_helper.cu
triton_chamfer/: CMakeLists.txt  main.cu  ops.py
triton_chamfer/include/: crude_nn.cuh  kd_closest_query.cuh
triton_chamfer/src/: crude_nn.cu  kd_closest_query.cu  module.cu
